# coreinitd

./: README.md  README.sh  meson.build
docs/: design.md  design_accept_yes.md  first-startup.txt  plan.md  socket_activation.txt  socket_fd_passing.md
etc/: coreinitd.conf
etc/units/: example.service  example.socket  example.timer
scripts/: init.sh  service-utils.sh  start-unit.sh
src/coreinitd/: event_loop.c  event_loop.h  main.c  service_manager.c  service_manager.h  socket_activation.c  socket_activation.h  socket_stream.c  socket_watcher.c  timerd.c  unit_loader.c  unit_loader.h
src/helpers/: get_unit_info.c  listen_fds.c  notify_ready.c  sandbox_launch.c  timerd.c
tests/: test-notify-ready.c  test-unit-parsing.c  test-unit-parsing.sh
